--- a/deploy-chain-1/relaychain/pvc.yaml
+++ b/deploy-chain-1/relaychain/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: polkadot-pvc
+  name: polkadot-rc-pvc
 spec:
   accessModes:
   - ReadWriteOnce
