--- a/deploy-chain-0/scc_admin.yaml
+++ b/deploy-chain-0/scc_admin.yaml
@@ -12,6 +12,10 @@ fsGroup:
 supplementalGroups:
   type: RunAsAny
 users:
-- my-admin-user
+- kube-admin-user
 groups:
-- my-admin-group
+- kube-admin-group
+requiredDropCapabilities:
+- KILL
+- MKNOD
+- SYS_CHROOT
