--- a/deploy-chain-0/blockchain/deployment.yaml
+++ b/deploy-chain-0/blockchain/deployment.yaml
@@ -15,18 +15,21 @@ spec:
       containers:
       - name: polkadot
         image: parity/polkadot:latest
-        args: ["--name", "opsumo-test","--chain","westend","--ws-external","--rpc-external", "--rpc-cors", "all"]
+        args: ["--name", "opsumo-test","--chain","westend","--ws-external","--rpc-external", "--prometheus-external"]
         ports:
         - containerPort: 9944
           name: wss
         - containerPort: 9933
+          name: rpc
         - containerPort: 30333
+          name: p2p
         volumeMounts:
-        - mountPath: /polkadot
+        - mountPath: /data
           name: polkadot
       volumes:
       - name: polkadot
         persistentVolumeClaim:
           claimName: polkadot-pvc
-
-
+      securityContext:
+        runAsUser: 0
+          
