--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -71,7 +71,7 @@ jobs:
   openshift-ci-cd:
     name: Build and deploy to OpenShift
     runs-on: ubuntu-18.04
-    environment: production
+    environment: staging
 
     outputs:
         ROUTE: ${{ steps.deploy-and-expose.outputs.route }}
