--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -41,7 +41,7 @@ env:
   QUAY_REGISTRY_PASSWORD: ${{ secrets.QUAI_REGISTRY_PASSWORD }}
 
   DOCKER_REGISTRY: hub.docker.com/repository/docker/edmcbee
-  DOCKER_REGISTRY_USER: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKER_REGISTRY_USER: edmcbee
   DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
 
   # ⬇️ EDIT to log into your OpenShift cluster and set up the context.
@@ -123,7 +123,7 @@ jobs:
     - name: Login to Dockerhub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ env.DOCKER_REGISTRY_USER }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push
       id:   docker_build
