--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -130,7 +130,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        file: deploy-chain-0/polkadot/scripts/docker/release.Dockerfile
+        file: deploy-chain-0/polkadot/docker/Dockerfile
         tags: |
           edmcbee/polkadot:latest
         build-args: |
