--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -108,9 +108,8 @@ jobs:
           else {
             core.info(`✅ All the required secrets are set`);
           }
-
-    - uses: actions/checkout@v2
-  
+    - name: checkout this repo/develop branch     
+      uses: actions/checkout@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
     - name: Cache Docker layers
