--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -52,7 +52,7 @@ env:
 
   # ⬇️ EDIT with any additional port your application should expose.
   # By default, oc new-app action creates a service to the image's lowest numeric exposed port.
-  APP_PORT: ""
+  APP_PORT: "9944"
 
   # ⬇️ EDIT if you wish to set the kube context's namespace after login. Leave blank to use the default namespace.
   OPENSHIFT_NAMESPACE: "polkad0t"
@@ -191,6 +191,15 @@ jobs:
         openshift_token: ${{ env.OPENSHIFT_TOKEN }}
         insecure_skip_tls_verify: true
         namespace: ${{ env.OPENSHIFT_NAMESPACE }}
+
+    - name: Create New Project
+      uses: redhat-developer/openshift-action
+      with:
+        version: '3.11.90'
+        openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
+        parameters: '{"apitoken": "${{ secrets.API_TOKEN }}", "acceptUntrustedCerts": "true"}'
+        cmd: |
+          'new-project ${{ env.OPENSHIFT_NAMESPACE }} || project ${{ env.OPENSHIFT_NAMESPACE }}'    
 
     # This step should create a deployment, service, and route to run your app and expose it to the internet.
     # https://github.com/redhat-actions/oc-new-app#readme
