--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -59,7 +59,7 @@ env:
 
   # If you wish to manually provide the APP_NAME and TAG, set them here, otherwise they will be auto-detected.
   APP_NAME: "polkadot"
-  TAG: ""
+  TAG: "latest"
 
 on:
   # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
@@ -112,36 +112,37 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: develop
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+
+    #- name: Set up Docker Buildx
+    #  uses: docker/setup-buildx-action@v1
+    #- name: Cache Docker layers
+    #  uses: actions/cache@v2
+    #  with:
+    #    path: /tmp/.buildx-cache
+    #    key: ${{ runner.os }}-buildx-${{ github.sha }}
+    #    restore-keys: |
+    #      ${{ runner.os }}-buildx-
     - name: Login to Dockerhub
       uses: docker/login-action@v1
       with:
         username: ${{ env.DOCKER_REGISTRY_USER }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push
-      id:   docker_build
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        file: deploy-chain-0/polkadot/docker/Dockerfile
-        tags: |
-          edmcbee/polkadot:latest
-        build-args: |
-          POLKADOT_VERSION=${{ github.event.release.tag_name }}
-          VCS_REF=${{ github.ref }}
-          BUILD_DATE=${{ github.event.release.published_at }}
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
+    #- name: Build and push
+    #  id:   docker_build
+    #  uses: docker/build-push-action@v2
+    #  with:
+    #    push: true
+    #    file: deploy-chain-0/polkadot/docker/Dockerfile
+    #    tags: |
+    #      edmcbee/polkadot:latest
+    #    build-args: |
+    #      POLKADOT_VERSION=${{ github.event.release.tag_name }}
+    #      VCS_REF=${{ github.ref }}
+    #      BUILD_DATE=${{ github.event.release.published_at }}
+    #    cache-from: type=local,src=/tmp/.buildx-cache
+    #    cache-to: type=local,dest=/tmp/.buildx-cache
+    #- name: Image digest
+    #  run: echo ${{ steps.docker_build.outputs.digest }}
 
     - name: Determine app name
       if: env.APP_NAME == ''
@@ -154,28 +155,34 @@ jobs:
         echo "TAG=${GITHUB_SHA::7}" | tee -a $GITHUB_ENV
 
     ## https://github.com/redhat-actions/buildah-build#readme
-    #- name: Build from Dockerfile
-    #  id: image-build
-    #  uses: redhat-actions/buildah-build@v2
-    #  with:
-    #    image: ${{ env.APP_NAME }}
-    #    tags: ${{ env.TAG }}
+    - name: Build from Dockerfile
+      id: image-build
+      uses: redhat-actions/buildah-build@v2
+      with:
+        image: ${{ env.APP_NAME }}
+        tags: ${{ env.TAG }}
+        #build-args: |
+        #  POLKADOT_VERSION=${{ github.event.release.tag_name }}
+        #  VCS_REF=${{ github.ref }}
+        #  BUILD_DATE=${{ github.event.release.published_at }}
+        #cache-from: type=local,src=/tmp/.buildx-cache
+        #cache-to: type=local,dest=/tmp/.buildx-cache
     #    # If you don't have a dockerfile, see:
     #    # https://github.com/redhat-actions/buildah-build#scratch-build-inputs
     #    # Otherwise, point this to your Dockerfile relative to the repository root.
-    #    dockerfiles: |
+        dockerfiles: |
+           ./deploy-chain-0/polkadot/docker/Dockerfile 
     #      ./Dockerfile
-
     ## https://github.com/redhat-actions/push-to-registry#readme
-    #- name: Push to registry
-    #  id: push-to-registry
-    #  uses: redhat-actions/push-to-registry@v2
-    #  with:
-    #    image: ${{ steps.image-build.outputs.image }}
-    #    tags: ${{ steps.image-build.outputs.tags }}
-    #    registry: ${{ env.REGISTRY }}
-    #    username: ${{ env.REGISTRY_USER }}
-    #    password: ${{ env.REGISTRY_PASSWORD }}
+    - name: Push to registry
+      id: push-to-registry
+      uses: redhat-actions/push-to-registry@v2
+      with:
+        image: ${{ steps.image-build.outputs.image }}
+        tags: ${{ steps.image-build.outputs.tags }}
+        registry: ${{ env.DOCKER_REGISTRY }}
+        username: ${{ env.DOCKER_REGISTRY_USER }}
+        password: ${{ env.DOCKER_PASSWORD }}
 
     # The path the image was pushed to is now stored in ${{ steps.push-to-registry.outputs.registry-path }}
 
@@ -197,7 +204,7 @@ jobs:
       uses: redhat-developer/openshift-actions@v1.1
       with:
         cmd: |
-          'new-project ${{ env.OPENSHIFT_NAMESPACE }}'
+          'oc new-project ${{ env.OPENSHIFT_NAMESPACE }}'
 
     # This step should create a deployment, service, and route to run your app and expose it to the internet.
     # https://github.com/redhat-actions/oc-new-app#readme
