--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -79,7 +79,7 @@ jobs:
 
     steps:
     - run: |
-        sudo apt-get update && sudo apt-get -y install libfuse3-dev
+        sudo apt-get update && sudo apt-get -y install fuse3 libc6 libfuse3-3 fuse-overlayfs
         mkdir -vp ~/.config/containers
         printf "[storage.options]\nmount_program=\"/usr/bin/fuse-overlayfs\"" > ~/.config/containers/storage.conf
 
