--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -70,7 +70,7 @@ on:
 jobs:
   openshift-ci-cd:
     name: Build and deploy to OpenShift
-    runs-on: ubuntu-19.04
+    runs-on: ubuntu-18.04
     environment: staging
 
     outputs:
@@ -132,22 +132,22 @@ jobs:
       with:
         username: ${{ env.DOCKER_REGISTRY_USER }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    #- name: Build and push
-    #  id:   docker_build
-    #  uses: docker/build-push-action@v2
-    #  with:
-    #    push: true
-    #    file: deploy-chain-0/polkadot/docker/Dockerfile
-    #    tags: |
-    #      edmcbee/polkadot:latest
-    #    build-args: |
-    #      POLKADOT_VERSION=${{ github.event.release.tag_name }}
-    #      VCS_REF=${{ github.ref }}
-    #      BUILD_DATE=${{ github.event.release.published_at }}
-    #    cache-from: type=local,src=/tmp/.buildx-cache
-    #    cache-to: type=local,dest=/tmp/.buildx-cache
-    #- name: Image digest
-    #  run: echo ${{ steps.docker_build.outputs.digest }}
+    - name: Build and push
+      id:   docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        file: deploy-chain-0/polkadot/docker/Dockerfile
+        tags: |
+          edmcbee/polkadot:latest
+        build-args: |
+          POLKADOT_VERSION=${{ github.event.release.tag_name }}
+          VCS_REF=${{ github.ref }}
+          BUILD_DATE=${{ github.event.release.published_at }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
 
     - name: Determine app name
       if: env.APP_NAME == ''
@@ -160,12 +160,12 @@ jobs:
         echo "TAG=${GITHUB_SHA::7}" | tee -a $GITHUB_ENV
 
     ## https://github.com/redhat-actions/buildah-build#readme
-    - name: Build from Dockerfile
-      id: image-build
-      uses: redhat-actions/buildah-build@v2
-      with:
-        image: ${{ env.APP_NAME }}
-        tags: ${{ env.TAG }}
+    #- name: Build from Dockerfile
+    #  id: image-build
+    #  uses: redhat-actions/buildah-build@v2
+    #  with:
+    #    image: ${{ env.APP_NAME }}
+    #    tags: ${{ env.TAG }}
         #build-args: |
         #  POLKADOT_VERSION=${{ github.event.release.tag_name }}
         #  VCS_REF=${{ github.ref }}
@@ -175,18 +175,18 @@ jobs:
     #    # If you don't have a dockerfile, see:
     #    # https://github.com/redhat-actions/buildah-build#scratch-build-inputs
     #    # Otherwise, point this to your Dockerfile relative to the repository root.
-        dockerfiles: |
-           deploy-chain-0/polkadot/docker/Dockerfile 
+    #    dockerfiles: |
+    #       deploy-chain-0/polkadot/docker/Dockerfile 
     #      ./Dockerfile
     ## https://github.com/redhat-actions/push-to-registry#readme
-    - name: Push to registry
-      id: push-to-registry
-      uses: redhat-actions/push-to-registry@v2
-      with:
-        image: ${{ steps.image-build.outputs.image }}
-        tags: ${{ steps.image-build.outputs.tags }}
-        registry: ${{ env.DOCKER_REGISTRY }}
-        username: ${{ env.DOCKER_REGISTRY_USER }}
+    #- name: Push to registry
+    #  id: push-to-registry
+    #  uses: redhat-actions/push-to-registry@v2
+    #  with:
+    #    image: ${{ steps.image-build.outputs.image }}
+    #    tags: ${{ steps.image-build.outputs.tags }}
+    #    registry: ${{ env.DOCKER_REGISTRY }}
+    #    username: ${{ env.DOCKER_REGISTRY_USER }}
         password: ${{ env.DOCKER_PASSWORD }}
 
     # The path the image was pushed to is now stored in ${{ steps.push-to-registry.outputs.registry-path }}
@@ -218,7 +218,7 @@ jobs:
       uses: redhat-actions/oc-new-app@v1
       with:
         app_name: ${{ env.APP_NAME }}
-        image: ${{ steps.push-to-registry.outputs.registry-path }}
+        image: ${{ steps.docker_build.outputs.registry-path }}
         namespace: ${{ env.OPENSHIFT_NAMESPACE }}
         port: ${{ env.APP_PORT }}
 
