--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -187,7 +187,7 @@ jobs:
     #    tags: ${{ steps.image-build.outputs.tags }}
     #    registry: ${{ env.DOCKER_REGISTRY }}
     #    username: ${{ env.DOCKER_REGISTRY_USER }}
-        password: ${{ env.DOCKER_PASSWORD }}
+    #    password: ${{ env.DOCKER_PASSWORD }}
 
     # The path the image was pushed to is now stored in ${{ steps.push-to-registry.outputs.registry-path }}
 
