--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -118,15 +118,15 @@ jobs:
       with:
         path: develop
 
-    #- name: Set up Docker Buildx
-    #  uses: docker/setup-buildx-action@v1
-    #- name: Cache Docker layers
-    #  uses: actions/cache@v2
-    #  with:
-    #    path: /tmp/.buildx-cache
-    #    key: ${{ runner.os }}-buildx-${{ github.sha }}
-    #    restore-keys: |
-    #      ${{ runner.os }}-buildx-
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
     - name: Login to Dockerhub
       uses: docker/login-action@v1
       with:
