--- a/.github/workflows/openshift copy.yml
+++ b/.github/workflows/openshift copy.yml
@@ -115,7 +115,89 @@ jobs:
           else {
             core.info(`✅ All the required secrets are set`);
           }
+    - name: checkout this repo/develop branch     
+      uses: actions/checkout@v2
+      with:
+        path: develop
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+    - name: Login to Dockerhub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ env.DOCKER_REGISTRY_USER }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      id:   docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        file: deploy-chain-0/polkadot/docker/Dockerfile
+        tags: |
+          edmcbee/polkadot:latest
+        build-args: |
+          POLKADOT_VERSION=${{ github.event.release.tag_name }}
+          VCS_REF=${{ github.ref }}
+          BUILD_DATE=${{ github.event.release.published_at }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
+
+    - name: Determine app name
+      if: env.APP_NAME == ''
+      run: |
+        echo "APP_NAME=$(basename $PWD)" | tee -a $GITHUB_ENV
+
+    - name: Determine tag
+      if: env.TAG == ''
+      run: |
+        echo "TAG=${GITHUB_SHA::7}" | tee -a $GITHUB_ENV
+
+    ## https://github.com/redhat-actions/buildah-build#readme
+    #- name: Build from Dockerfile
+    #  id: image-build
+    #  uses: redhat-actions/buildah-build@v2
+    #  with:
+    #    image: ${{ env.APP_NAME }}
+    #    tags: ${{ env.TAG }}
+        #build-args: |
+        #  POLKADOT_VERSION=${{ github.event.release.tag_name }}
+        #  VCS_REF=${{ github.ref }}
+        #  BUILD_DATE=${{ github.event.release.published_at }}
+        #cache-from: type=local,src=/tmp/.buildx-cache
+        #cache-to: type=local,dest=/tmp/.buildx-cache
+    #    # If you don't have a dockerfile, see:
+    #    # https://github.com/redhat-actions/buildah-build#scratch-build-inputs
+    #    # Otherwise, point this to your Dockerfile relative to the repository root.
+    #    dockerfiles: |
+    #       deploy-chain-0/polkadot/docker/Dockerfile 
+    #      ./Dockerfile
+    ## https://github.com/redhat-actions/push-to-registry#readme
+    #- name: Push to registry
+    #  id: push-to-registry
+    #  uses: redhat-actions/push-to-registry@v2
+    #  with:
+    #    image: ${{ steps.image-build.outputs.image }}
+    #    tags: ${{ steps.image-build.outputs.tags }}
+    #    registry: ${{ env.DOCKER_REGISTRY }}
+    #    username: ${{ env.DOCKER_REGISTRY_USER }}
+    #    password: ${{ env.DOCKER_PASSWORD }}
+
+    # The path the image was pushed to is now stored in ${{ steps.push-to-registry.outputs.registry-path }}
+
+    # oc-login works on all platforms, but oc must be installed first.
+    # The GitHub Ubuntu runner already includes oc.
+    # Otherwise, https://github.com/redhat-actions/oc-installer#readme is available.
+
+    # https://github.com/redhat-actions/oc-login#readme
     - name: Log in to OpenShift
       uses: redhat-actions/oc-login@v1
       with:
@@ -131,3 +213,25 @@ jobs:
         cmd: |
           'oc --token=${{ env.OPENSHIFT_TOKEN }} rollout latest dc/polkadot -n polkadot'
 
+    # This step should create a deployment, service, and route to run your app and expose it to the internet.
+    # https://github.com/redhat-actions/oc-new-app#readme
+    #- name: Create and expose app
+    #  id: deploy-and-expose
+    #  uses: redhat-actions/oc-new-app@v1
+    #  with:
+    #    app_name: ${{ env.APP_NAME }}
+    #    image: ${{ steps.docker_build.outputs.registry-path }}
+    #    namespace: ${{ env.OPENSHIFT_NAMESPACE }}
+    #    port: ${{ env.APP_PORT }}
+
+    #- name: View application route
+    #  run: |
+    #    [[ -n ${{ env.ROUTE }} ]] || (echo "Determining application route failed in previous step"; exit 1)
+    #    echo "======================== Your application is available at: ========================"
+    #    echo ${{ env.ROUTE }}
+    #    echo "==================================================================================="
+    #    echo
+    #    echo "Your app can be taken down with: \"oc delete all --selector='${{ env.SELECTOR }}'\""
+    #  env:
+    #    ROUTE: ${{ steps.deploy-and-expose.outputs.route }}
+    #    SELECTOR: ${{ steps.deploy-and-expose.outputs.selector }}
