--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -80,23 +80,59 @@ jobs:
         SELECTOR: ${{ steps.deploy-and-expose.outputs.selector }}
 
     steps:
-    - name: Install oc
-      uses: redhat-actions/oc-installer@v1
-      with:
-        oc_version: '4.6'
-        
-    - name: Log in to OpenShift
-      uses: redhat-actions/oc-login@v1
-      with:
-        openshift_server_url: ${{ env.OPENSHIFT_SERVER }}
-        openshift_token: ${{ env.OPENSHIFT_TOKEN }}
-        insecure_skip_tls_verify: true
-        namespace: ${{ env.OPENSHIFT_NAMESPACE }}
-        
-    - name: Do print Openshift URL
-      run: echo ${{ env.OPENSHIFT_SERVER }}
+    ######DOCKER BUILD
+      - uses: actions/checkout@v2
+      - name: Set up Docker Build
+        uses: docker/setup-buildx-action@v1
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+         path: /tmp/.buildx-cache
+         key: ${{ runner.os }}-buildx-${{ github.sha }}
+         restore-keys: |
+           ${{ runner.os }}-buildx-
+      - name: Login to Dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKER_REGISTRY_USER }}
+          password: ${{ env.DOCKER_PASSWORD }}
+      - name: Build and push
+        id:   docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: deploy-chain-0/polkadot/docker/Dockerfile
+          tags: |
+            parity/polkadot:latest
+          build-args: |
+            POLKADOT_VERSION=${{ github.event.release.tag_name }}
+            VCS_REF=${{ github.ref }}
+            BUILD_DATE=${{ github.event.release.published_at }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+      ######DOCKER BUILD
 
-    - name: Deploy to Project
-      id: new-project-namespace  
-      run: oc --token=${{ env.OPENSHIFT_TOKEN }} --server=${{ env.OPENSHIFT_SERVER }} rollout latest dc/polkadot -n polkadot
+      ######CICD to OCP
+      - name: Install oc
+        uses: redhat-actions/oc-installer@v1
+        with:
+          oc_version: '4.6'
+          
+      - name: Log in to OpenShift
+        uses: redhat-actions/oc-login@v1
+        with:
+          openshift_server_url: ${{ env.OPENSHIFT_SERVER }}
+          openshift_token: ${{ env.OPENSHIFT_TOKEN }}
+          insecure_skip_tls_verify: true
+          namespace: ${{ env.OPENSHIFT_NAMESPACE }}
+          
+      - name: Do print Openshift URL
+        run: echo ${{ env.OPENSHIFT_SERVER }}
+
+      - name: Deploy to Project
+        id: new-project-namespace  
+        run: oc --token=${{ env.OPENSHIFT_TOKEN }} --server=${{ env.OPENSHIFT_SERVER }} rollout latest dc/polkadot -n polkadot
+      ######CICD to OCP  
 
