--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -81,7 +81,10 @@ jobs:
 
     steps:
     ######DOCKER BUILD
-      - uses: actions/checkout@v2
+      - name: Github checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1  
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v1
       - name: Cache Docker layers
